# Automated-mine-management-system

./: .gitignore  Cargo.toml  README.en.md  README.md  docker-compose.yml  package-lock.json  package.json
apps/admin-web/: index.html  package.json  tsconfig.json
apps/api/: Cargo.toml  Dockerfile
apps/api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  pagination.rs  state.rs
apps/api/src/middleware/: auth.rs  rate_limit.rs
apps/api/src/modules/: ai.rs  alert.rs  audit_log.rs  auth.rs  dashboard.rs  dispatch.rs  driver.rs  fence.rs  health.rs  loading.rs  missions.rs  mod.rs  offline.rs  pit.rs  queue.rs  scale.rs  system_config.rs  waybill.rs  weighing.rs  ws.rs
apps/api/tests/: dispatch_flow.rs
apps/demo-hub/: index.html  package-lock.json  package.json  vite.config.ts
apps/driver-app/: README.md  pubspec.yaml
apps/driver-miniapp/: index.html  package-lock.json  package.json  vite.config.ts
apps/pit-app/: README.md  pubspec.yaml
apps/pit-h5/: index.html  package-lock.json  package.json  vite.config.ts
apps/shared/: pubspec.yaml
db/: init.sql
db/migrations/: 0002_real_scene_extensions.sql  0003_missions_offline_plate.sql  0004_scale_auto_weigh.sql  0005_geo_fence.sql
docs/: api-reference.md  architecture.md  client-outreach.md  company-analysis.md  contact-info.md  database-schema.md  deployment-guide.md  development-guide.md  dispatch-algorithm.md  dual-mode-guide.md  features-technical-design.md  huawei-certified-devices.md  huawei-contacts.md  huawei-mining-ecosystem.md  huawei-osv-analysis.md  huawei-osv-guide.md  mining-enterprise-contacts.csv  mining-enterprise-contacts.md  mining-enterprise-free-collection.csv  mining-enterprise-free-collection.md  openapi.json  openpangu-integration.md  pangu-capabilities.md  pangu-cost.md  pangu-dev-doc.md  pangu-integration.md  phase-plan.md  potential-clients-expanded.md  product-intro.md  product-overview.md  real-site-adaptation-analysis.md  requirement-coverage-analysis.md  requirements-baseline.md  scenario-coverage-analysis.md  scraped_enterprises.csv  scraped_enterprises.md  self-recommendation.md  sent-log.md  user-manual.md  全国矿山企业_全部唯一.csv  (+7 more)
scripts/: scrape_mine_enterprises.py  send_emails.py
(+49 files in other folders)
